// Asegúrate que este archivo se llame Combat.ts y esté en la carpeta src/models/

// import { Types } from 'mongoose'; // Solo si usas tipos de Mongoose directamente, sino string está bien para IDs

// Interfaz para el objeto Gym que esperas del backend
export interface GymDetails { // <-- ¿Está exportada?
  _id: string;
  name: string;
  location?: string;
}
// Interfaz para un registro individual en el historial de combates
// (Esta es una de las que da error si no se exporta o no existe)
export interface CombatHistoryEntry { // <-- ¡ASEGÚRATE QUE ESTÉ EXPORTADA!
  _id: string;
  date: string;
  time: string;
  level?: string;
  gym: GymDetails | null;
  opponent: OpponentDetails | null;
  creator: OpponentDetails | null;
  result: 'Victoria' | 'Derrota' | 'Empate';
  status: 'completed';
}

// Interfaz para el objeto Opponent que esperas del backend
export interface OpponentDetails { // <-- ¿Está exportada?
  _id?: string;
  id?: string;
  username: string;
  profileImage?: string;
}


// Interfaz para la estructura completa de la respuesta de la API de historial
// (Esta es la otra que da error si no se exporta o no existe)
export interface CombatHistoryApiResponse { // <-- ¡ASEGÚRATE QUE ESTÉ EXPORTADA!
  message: string;
  data: {
    combats: CombatHistoryEntry[];
    totalCombats: number;
    totalPages: number;
    currentPage: number;
    pageSize: number;
  };
}

// Tu interfaz Combat original, si la mantienes y es diferente, también debería estar aquí
export interface Combat { // Esta es la que tus otras funciones de servicio ya usan
  _id?: string;
  creator: string;
  opponent: string; // ID del oponente (diferente a OpponentDetails)
  date: Date | string;
  time: string;
  level: string;
  gym: string; // ID del gym (diferente a GymDetails)
  status: 'pending' | 'accepted' | 'rejected' | 'completed' | 'active' | 'cancelled'; // Asegúrate que este enum esté completo
  createdAt?: Date | string;
  updatedAt?: Date | string;
  boxers?: string[];
  image?: string;
  // ...otros campos opcionales...

  // ... otros campos si los tienes de antes
}

// Añadir al final de reactweb/src/models/Combat.ts

export interface FrequentOpponent {
  opponent: {
    id: string;
    name: string;
  };
  count: number;
}

export interface FrequentGym {
  gym: {
    id: string;
    name: string;
  };
  count: number;
}

export interface CombatsPerMonth {
  year: number;
  month: number;
  count: number;
}

export interface IUserStatistics {
  mostFrequentOpponent: FrequentOpponent | null;
  frequentGyms: FrequentGym[];
  combatsPerMonth: CombatsPerMonth[];
  // NUEVO: medias de valoraciones
  ratingAverages?: {
    punctuality: number;
    attitude: number;
    intensity: number;
    sportmanship: number;
    technique: number;
  };
}